[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spinelibs"
description = "Libs for spine project"

readme = "README.md"
version = "0.0.14"
authors = [
    { name = "Shahar Luftig", email = "shaharluftig@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"

keywords = ["dataframe", "dag", "core"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "spinecore"
]

[project.optional-dependencies]
polars = ["spinecore[polars]"]
spark = ["spinecore[spark]"]
all = ["spinecore[spark]", "spinecore[polars]"]

[project.urls]
"Homepage" = "https://github.com/shaharluftig/spine"