[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspine"
description = "Spine: The backbone of your project"

readme = "README.md"
version = "0.0.14"
authors = [
    { name = "Shahar Luftig", email = "shaharluftig@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"

keywords = ["dataframe", "dag", "core", "spine", "workflow", "data pipline", "data enginnering"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "spinecore",
    "spinelibs"
]

[project.optional-dependencies]
dev = [
    "pytest ~=7.2.2",
    "pytest-asyncio ~=0.20.3",
    "spinecore[all]", "spinelibs[all]"
]
polars = ["spinecore[polars]", "spinelibs[polars]"]
spark = ["spinecore[spark]", "spinelibs[spark]"]
all = ["spinecore[spark]", "spinelibs[spark]", "spinecore[polars]", "spinelibs[polars]"]

[project.urls]
"Homepage" = "https://github.com/shaharluftig/spine"