[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spinecore"
description = "The core lib of spine library"
readme = "README.md"
version = "0.0.13"

authors = [
    { name = "Shahar Luftig", email = "shaharluftig@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"

keywords = ["dataframe", "dag", "core", "spine", "workflow", "data pipline", "data enginnering"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "stringcase ~=1.2.0",
    "matplotlib ~=3.7.1",
    "networkx ~=3.0",
]

[project.optional-dependencies]
polars = ["polars ~=0.16.11", "pyarrow ~=11.0.0", "connectorx ~=0.3.2a2"]
spark = ["pyspark ~=3.2.1"]
all = ["spinecore[polars]", "spinecore[spark]"]

[project.urls]
"Homepage" = "https://github.com/shaharluftig/spine"